--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,8 @@ ul, li {
 
 .about__title,
 .services__title,
-.works__title {
+.works__title,
+.pricing__title {
     font-size: 30px;
     letter-spacing: 0.5px;
     line-height: 22px;
@@ -134,7 +135,8 @@ ul, li {
 
 .about__text,
 .services__text,
-.works__text {
+.works__text,
+.pricing__text {
     padding: 0 280px;
     padding: 25px 280px 110px;
     text-align: center;
@@ -165,7 +167,8 @@ ul, li {
 }
 
 .services__items,
-.works__items {
+.works__items,
+.pricing__plans {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -254,10 +257,12 @@ ul, li {
 }
 
 .works__btn:hover,
-.works__btn-bottom:hover {
+.works__btn-bottom:hover,
+.pricing__btn:hover {
     color: #fff;
     background: #00897b;
     transition: 0.3s;
+    border-color: transparent;
 }
 
 .works__item {
@@ -275,7 +280,7 @@ ul, li {
     top: 0;
     left: 0;
     width: 100%;
-    height: 99%;
+    height: 100%;
     text-decoration: none;
     background-color: rgba(0,0,0,.4);
     padding-top: 145px;
@@ -299,10 +304,92 @@ ul, li {
 
 .works__btn-bottom-wrapper {
     text-align: center;
-    padding: 95px;
+    padding-top: 95px;
 }
 
 .works__btn-bottom {
     line-height: 70px;
     padding: 0 65px;
 }
+
+.pricing {
+    background-color: #f0f1f1;
+    padding: 125px 0;
+}
+
+.pricing__plan {
+    max-width: 370px;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 65px;
+    background: #fff;
+}
+
+.pricing__plan:hover {
+    box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.35);
+    transition: 0.3s;
+}
+
+.pricing__plan-title {
+    height: 180px;
+    background: #3949ab;
+    position: relative;
+    padding-top: 45px;
+}
+
+.pricing__plan-title::after {
+    content: "";
+    position: absolute;
+    height: 30px;
+    background: #000;
+    border-left: 370px solid #3949ab;
+    border-bottom: 30px solid #f0f1f1;
+    top: 150px;
+    left: 0;
+}
+
+.pricing__name {
+    font-size: 25px;
+    color: #fff;
+}
+
+.pricing__price {
+    font-size: 50px;
+    color: #fff;
+    padding-top: 45px;
+    position: relative;
+}
+
+.pricing__price-currency {
+    font-size: 25px;
+    position: absolute;
+    top: 37px;
+    left: 94px;
+}
+
+.pricing__price-time-interval {
+    font-size: 17px;
+}
+
+.pricing__list {
+    list-style: none;
+    padding: 45px 95px;
+}
+
+.pricing__list li {
+    padding: 33px 0 9px;
+    border-bottom: 1px solid #bfbfbf;
+}
+
+.pricing__btn {
+    width: 180px;
+    height: 60px;
+    border: 2px solid #212121;
+    color: #212121;
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 60px;
+}
+  
