--- a/css/style.css
+++ b/css/style.css
@@ -589,4 +589,72 @@ article {
     line-height: 105px;
     color: #fff;
 }
+
+.contact-us__address-text,
+.contact-us__phone-text,
+.contact-us__mail-text {
+    padding-top: 35px;
+}
+
+.form {
+    padding: 80px 70px 0;
+}
+
+.form::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.input-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+input,
+textarea,
+.form-btn {
+    border-radius: 10px;
+    border: none;
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.5px;
+    padding: 20px;
+}
+
+input {
+    max-width: 500px;
+    width: 100%;
+    height: 85px;
+}
+
+textarea {
+    max-width: 1030px;
+    width: 100%;
+    height: 320px;
+    margin-top: 30px;
+    resize: none;  
+}
+
+.form-btn {
+    width: 220px;
+    height: 70px;
+    border-radius: 10px;
+    border: none;
+    float: right;
+    font-weight: 700;
+    background: #fff;
+    text-transform: uppercase;
+    margin-top: 40px;
+    cursor: pointer;
+}
+
+.copyright {
+    font-size: 20px;
+    line-height: 22px;
+    letter-spacing: 0.5px;
+    font-weight: 700;
+    text-align: center;
+    padding: 21px 0;
+}
   
