--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,6 @@ ul, li {
 }
 
 .services__items,
-.works__items,
 .pricing__plans {
     display: flex;
     justify-content: space-between;
@@ -194,7 +193,7 @@ ul, li {
 .services__item {
     max-width: 370px;
     width: 100%;
-    margin: 15px 0;
+    margin: 15px 0px;
     background: #fff;
     padding: 55px 46px 50px;
     position: relative;
@@ -272,6 +271,8 @@ ul, li {
     font-size: 20px;
     font-weight: 500;
     padding: 0 16px;
+    background: transparent;
+    cursor: pointer;
 }
 
 .works__btn:hover,
@@ -284,11 +285,19 @@ ul, li {
     border-color: transparent;
 }
 
+.works__items {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+    min-height: 800px;
+}
+
 .works__item {
     max-width: 370px;
     width: 100%;
     height: 370px;
-    margin: 15px 0;
+    margin: 15px 15px;
     position: relative;
 }
 
@@ -360,11 +369,14 @@ ul, li {
 .pricing__plan-title::after {
     content: "";
     position: absolute;
-    height: 30px;
-    border-left: 370px solid #3949ab;
-    border-bottom: 30px solid #fff;
+    height: 60px;
+    width: 100%;
+    /* border-left: 370px solid #3949ab;
+    border-bottom: 30px solid #fff; */
     top: 150px;
     left: 0;
+    background: #3949ab;
+    clip-path: polygon(0 0, 100% 0, 200% 0, 0 100%);
 }
 
 .pricing__name {
@@ -375,19 +387,22 @@ ul, li {
 .pricing__price {
     font-size: 50px;
     color: #fff;
-    padding-top: 45px;
+    padding-top: 40px;
     position: relative;
 }
 
 .pricing__price-currency {
     font-size: 25px;
-    position: absolute;
-    top: 37px;
-    left: 94px;
+    padding-top: 18px;
+}
+
+.price {
+    padding-top: 10px;
 }
 
 .pricing__price-time-interval {
     font-size: 17px;
+    padding-top: 20px;
 }
 
 .pricing__list {
@@ -427,6 +442,7 @@ ul, li {
 .team__members {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 75px;
 }
 
 .team__member {
@@ -443,7 +459,9 @@ ul, li {
     display: flex;
     justify-content: space-between;
     padding: 0 50px;
+    margin: 0 auto;
     margin-top: 35px;
+    width: 390px;
 }
 
 .team__member-icon {
@@ -471,7 +489,7 @@ ul, li {
     border: none;
 }
 
-.member__btn:active {
+.member__btn[class="slick-active"] {
     background-color: #3949ab;
 }
 
@@ -479,28 +497,10 @@ ul, li {
     list-style: none;
     display: flex;
     justify-content: center;
-    padding-top: 125px;
 }
 
 .slick-dots li {
     margin-left: 5px;
-}
-
-.slick-dots li button {
-    border: none;
-    width: 17px;
-    height: 17px;
-    border-radius: 50%;
-    background: #3949ab;
-    color: #3949ab;
-    content: none;
-    outline: none;
-}
-
-.slick-dots li button:active,
-.slick-dots li button:focus {
-    background: #00897b;
-    color: #00897b;
 }
 
 .blog {
