--- a/css/style.css
+++ b/css/style.css
@@ -513,12 +513,15 @@ article {
     display: flex;
     justify-content: space-between;
 }
+.article-2 {
+    flex-direction: row-reverse;
+}
 
 .blog__img,
 .blog__content {
     max-width: 570px;
     width: 100%;
-    min-height: 400px;
+    min-height: 203px;
 }
 
 .blog__content {
@@ -567,6 +570,7 @@ article {
 .contact-us__contacts-wrapper {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .contact-us__address,
@@ -609,6 +613,8 @@ article {
 .input-wrapper {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
 
 input,
@@ -626,6 +632,7 @@ input {
     max-width: 500px;
     width: 100%;
     height: 85px;
+    margin: 0 15px;
 }
 
 textarea {
